<resources>
    <string name="app_name">TravelBD</string>
    <string name="profile_name">My Profile</string>
    <string name="sign_out">Sign Out</string>
    <string name="settings">Settings</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="developer">Asaduzzaman Nur Shuvo</string>
    <string name="total_post_number">250</string>
    <string name="text_posts">Posts</string>
    <string name="total_follower_number">375</string>
    <string name="text_followers">Followers</string>
    <string name="total_following_number">750</string>
    <string name="text_following">Following</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="hometown">Lives in Maijdee, Noakhali, Bangledesh</string>
    <string name="traveled">Traveled to 6 places!</string>
    <string name="account_settings">Account Settings</string>
    <string name="change_password">Change Password</string>
    <string name="change_photo">Change Photo</string>
    <string name="gender">Male</string>
    <string name="phone_no">+8801840098467</string>
    <string name="bio">A special house is built in Shanghai. It is upside down.
                        The house features a bathroom, bedrooms, a kitchen and a living area.
                        Everything is upside down in the house, even the furniture and the cutlery.
                        Many people are shocked. They lose their balance.
                        One tourist likes the bathroom the most.
                        There is a toilet in the bathroom. The tourist thinks that the water can fall out of the toilet.</string>
    <string-array name="Gender_Names">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
    <string name="login">Log In</string>
    <string name="signup">Sign Up</string>
    <string name="hello_user">Hello Moshiur</string>
    <string name="welcome">Welcome to our community</string>
    <string name="get_started">get started</string>
    <string name="user_personal_Info">User Personal Info</string>
    <string name="user_public_Info">User Public Info</string>
    <string name="check_your_email">Check Your Email</string>
    <string name="check_email_dialog_box_text">Follow the link in the email we sent shuvroshawon9@gmail.com to confirm your email address and help secure your account.</string>
    <string name="ok">OK</string>
    <string name="field_username">username</string>
    <string name="field_gender">gender</string>
    <string name="field_phone_number">phone_number</string>
    <string name="field_bio">bio</string>
    <string name="gallery">GALLERY</string>
    <string name="photo">PHOTO</string>
    <string name="next">Next</string>
    <string name="selected_image">Selected Image</string>
    <string name="photo_string">Photo</string>
    <string name="write_a_caption">Write a caption...</string>
    <string name="share_to">Share To</string>
    <string name="share">Share</string>
    <string name="add_location">Add Location</string>
    <string name="google_maps_API_key">AIzaSyA4_6s8a86g3a-67vu0zIKdgZhMCGq63Hw</string>
    <string name="try_your_traveled_places">Try your traveled places</string>
    <string name="user_selected_location">User Selected Location</string>
    <string name="rate_this_place">Rate This Place</string>
    <string name="tap_a_star_to_rate">Tap a star to rate</string>
    <string name="rate_your_traveled_place">Rate Your Traveled Place</string>
    <string name="thank_you_for_the_rating">Thank you for the rating</string>
    <string name="tag_people">Tag People</string>
    <string name="facebook">Facebook</string>
    <string name="search_for_a_user">Search for a user</string>
    <string name="selected_user_info">Selected User Info</string>
    <string name="facebook_app_id">1786036838111875</string>
    <string name="facebook_login_protocol_scheme">fb1786036838111875</string>
    <string name="user_photos">User Photos</string>
    <string name="photos">Photos</string>
    <string name="uploaded">Uploaded</string>
    <string name="tagged">Tagged</string>
    <string name="profile_photo">profile_photo</string>
    <string name="posts_field">posts</string>
    <string name="hometown_field">hometown</string>
    <string name="question">Are you indicating the following places?</string>
    <string name="previous_page">PREV</string>
    <string name="next_page">NEXT</string>
    <string name="captured_image_bitmap">Captured Image Bitmap</string>
    <string name="search_destination_places">Search Destination Places</string>
    <string name="search">Search</string>
    <string name="where_do_you_want_to_go">Where do you want to go?</string>
    <string name="current_location">Maijdee</string>
    <string name="current_location_text">Current location</string>
    <string name="restaurants">Restaurants</string>
    <string name="coffee_shop">Coffee Shops</string>
    <string name="parks">Parks</string>
    <string name="attractions">Attractions</string>
    <string name="movie_theater">Movie Theaters</string>
    <string name="shopping_mall">Shopping Malls</string>
    <string name="hotels">Hotels</string>
    <string name="atms">ATMs</string>
    <string name="hospitals">Hospitals</string>
    <string name="bus_station">Bus Stations</string>
    <string name="travel_agency">Travel Agencies</string>
    <string name="bundle">Bundle</string>
    <string name="explore_nearby">Explore Nearby</string>
    <string name="place_types">Place Types</string>
    <string name="profile_fragment">Profile</string>
    <string name="view_post_fragment">ViewPostFragment</string>
    <string name="activity_number">activity_number</string>
    <string name="field_user_id">user_id</string>
    <string name="field_caption">caption</string>
    <string name="field_uploaded_date">uploaded_date</string>
    <string name="field_image_url">image_url</string>
    <string name="field_photo_id">photo_id</string>
    <string name="field_location">location</string>
    <string name="field_rating">rating</string>
    <string name="field_google_places_rating">google_places_rating</string>
    <string name="field_tagged_user_id">tagged_user_id</string>
    <string name="field_tags">tags</string>
    <string name="field_likes">likes</string>
    <string name="field_comments">comments</string>
    <string name="view_comments_fragment">View Comments</string>
    <string name="calling_activity">calling_activity</string>
    <string name="intent_user">intent_user</string>
    <string name="search_activity">Search Activity</string>
    <string name="view_profile_fragment">View Profile Fragment</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="dbname_following">following</string>
    <string name="dbname_followers">followers</string>
    <string name="bundle_photo">bundle_photo</string>
    <string name="bundle_user_account_settings">bundle_user_account_settings</string>
    <string name="home_activity">Home Activity</string>
    <string name="tourist_destination">Tourist Destination</string>

    <!-- TODO: Country Array for Currency Converter -->

    <string-array name="country_arrays">
        <item>BDT</item>
        <item>USD</item>
        <item>BGN</item>
        <item>BRL</item>
        <item>CAD</item>
        <item>CHF</item>
        <item>INR</item>
        <item>AED</item>
        <item>ANG</item>
        <item>ARS</item>
        <item>BAM</item>
        <item>BIF</item>
        <item>COP</item>
        <item>DZD</item>
        <item>EGP</item>
        <item>GEL</item>
        <item>GMD</item>
        <item>HTG</item>
        <item>JPY</item>
        <item>KHR</item>
        <item>LBP</item>
        <item>MNT</item>
        <item>MVR</item>
        <item>NPR</item>
        <item>OMR</item>
        <item>PLN</item>
        <item>RSD</item>
        <item>SDG</item>
        <item>SHP</item>
        <item>TJS</item>
        <item>TWD</item>
        <item>UAH</item>
        <item>UZS</item>
        <item>YER</item>
        <item>ZMW</item>

    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>