<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/nav_profile"
        android:icon="@mipmap/baseline_person_black_24dp"
        android:title="@string/profile_name"/>

    <item android:id="@+id/nav_favourite_places"
        android:icon="@drawable/ic_favourite"
        android:title="Favourites"/>

    <item android:id="@+id/nav_message"
        android:icon="@drawable/ic_message"
        android:title="Chat"/>

    <item android:id="@+id/nav_my_trips"
        android:icon="@drawable/ic_trips"
        android:title="My Trips"/>

    <item android:id="@+id/nav_nearbyPeople"
        android:icon="@drawable/ic_add_person"
        android:title="Nearby People"/>


    <item android:id="@+id/nav_tourist_destination"
        android:icon="@drawable/ic_tourist_destination"
        android:title="@string/tourist_destination"/>

    <item android:id="@+id/nav_search_destination_places"
        android:icon="@drawable/ic_search"
        android:title="@string/search_destination_places"/>

    <item android:id="@+id/nav_suggested_places"
        android:icon="@drawable/ic_place"
        android:title="Suggested Places"/>

    <item android:id="@+id/nav_utilities_info"
        android:icon="@drawable/ic_utilities"
        android:title="Utilities"/>

    <item android:id="@+id/nav_sign_out"
        android:icon="@drawable/ic_exit_to_app_black_24dp"
        android:title="@string/sign_out"/>

</menu>