<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        >

        <TextView
            android:id="@+id/tvPosts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="17sp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="2dp"
            app:layout_constraintLeft_toLeftOf="parent"
            />

        <TextView
            android:id="@+id/textPosts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_posts"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@+id/tvPosts"
            app:layout_constraintLeft_toLeftOf="parent"
            />

        <TextView
            android:id="@+id/tvFollowers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="17sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/tvFollowing"
            app:layout_constraintLeft_toRightOf="@+id/tvPosts"
            android:layout_marginTop="2dp"
            app:layout_constraintHorizontal_bias="0.45"
            />

        <TextView
            android:id="@+id/textFollowers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_followers"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@+id/tvFollowers"
            app:layout_constraintLeft_toRightOf="@+id/textPosts"
            app:layout_constraintRight_toLeftOf="@+id/textFollolwing"
            app:layout_constraintHorizontal_bias="0.527"
            />

        <TextView
            android:id="@+id/tvFollowing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="17sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="2dp"
            />

        <TextView
            android:id="@+id/textFollolwing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_following"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@+id/tvFollowing"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:id="@+id/textEditProfile"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:text="@string/edit_profile"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/textFollowers"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textAlignment="center"
            android:background="@drawable/gray_border"
            />

    </android.support.constraint.ConstraintLayout>

</merge>