<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/relativeLayout1">

                <!-- Toolbar -->
                <include layout="@layout/snippet_top_next_share_activity"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/relativeLayout2"
                android:layout_below="@id/relativeLayout1"
                android:background="@drawable/light_white_gray_border_bottom"
                android:focusable="false"
                android:focusableInTouchMode="true">
                
                <ImageView
                    android:layout_width="52dp"
                    android:layout_height="52dp"
                    android:id="@+id/imageShare"
                    android:scaleType="centerCrop"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:layout_alignParentEnd="true"
                    />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_image"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerVertical="true"
                    app:civ_border_color="@color/gray"
                    app:civ_border_width="0.5dp"
                    android:src="@drawable/avatar"
                    android:scaleType="centerCrop"
                    android:layout_alignParentStart="true"
                    android:layout_marginEnd="15dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@id/imageShare"
                    android:layout_toEndOf="@id/profile_image"
                    android:id="@+id/description"
                    android:hint="@string/write_a_caption"
                    android:layout_centerVertical="true"
                    android:background="@null"
                    android:textSize="14sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:textColorHint="@color/edittext_hint_color"
                    />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/relativeLayout2"
                android:id="@+id/relativeLayout3"
                android:background="@drawable/light_white_gray_border_bottom">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:id="@+id/location_icon"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/ic_location"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@+id/location_icon"
                    android:layout_alignParentStart="true"
                    android:id="@+id/add_location"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/add_location"
                    android:textColor="@color/light_black"
                    android:textSize="15sp"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/relativeLayout3"
                android:id="@+id/relativeLayout4"
                android:background="@drawable/light_white_gray_border_bottom">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:id="@+id/rating_icon"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/ic_rating"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_toStartOf="@+id/rating_icon"
                    android:id="@+id/add_rating"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/rate_your_traveled_place"
                    android:textColor="@color/light_black"
                    android:textSize="15sp"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/relativeLayout4"
                android:id="@+id/relativeLayout5"
                android:background="@drawable/light_white_gray_border_bottom">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:id="@+id/tag_people_icon"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/ic_tag_people"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_toStartOf="@+id/tag_people_icon"
                    android:id="@+id/tag_people"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/tag_people"
                    android:textColor="@color/light_black"
                    android:textSize="15sp"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/relativeLayout5"
                android:id="@+id/relativeLayout6"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:id="@+id/share_to"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/share_to"
                    android:textColor="@color/light_black"
                    android:textSize="15sp"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/relativeLayout6"
                android:id="@+id/relativeLayout7"
                >

                <android.support.v7.widget.SwitchCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/facebook_share_switch"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_alignParentEnd="true"
                    android:checked="false"
                    android:theme="@style/SwitchCompatColor"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_toStartOf="@+id/facebook_share_switch"
                    android:id="@+id/facebook_share"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="1dp"
                    android:text="@string/facebook"
                    android:textColor="@color/light_black"
                    android:textSize="15sp"/>

            </RelativeLayout>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>